// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list should display properly 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
  />
</DocumentFragment>
`;

exports[`list should display properly 2`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
  />
</div>
`;
